--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,21 @@
 logging.config = classpath:logback.xml
+
+
+# Redis?????????0?
+spring.redis.database=0
+# Redis?????
+spring.redis.host=127.0.0.1
+# Redis???????
+spring.redis.port=6379
+# Redis?????????????
+spring.redis.password=Abby.Chen01
+# ????????????????????
+spring.redis.pool.max-active=8
+# ???????????????????????
+spring.redis.pool.max-wait=-1
+# ???????????
+spring.redis.pool.max-idle=8
+# ???????????
+spring.redis.pool.min-idle=0
+# ??????????
+spring.redis.timeout=0
